new time series analysis

--- a/Models and Forecasting/Time Series/Time Series Forecast.ipynb
+++ b/Models and Forecasting/Time Series/Time Series Forecast.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -153,7 +153,7 @@
        "4           23387           92983         98568  Alabama  "
       ]
      },
-     "execution_count": 77,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -263,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -299,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -888,8 +888,63 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Building on the entire dataset"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Benchmarking against the 2018 data for error calculation"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:fbprophet.forecaster:Disabling weekly seasonality. Run prophet with weekly_seasonality=True to override this.\n",
+      "INFO:fbprophet.forecaster:Disabling daily seasonality. Run prophet with daily_seasonality=True to override this.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MSE: 68598806798.67338\n",
+      "RMSE: 261913.73923235372\n",
+      "RMSLE: 0.045490722565409286\n"
+     ]
+    }
+   ],
+   "source": [
+    "contract_establish_ts_all_bench = contract_establish_ts_all[:-4]\n",
+    "prophet_model = fbprophet.Prophet(changepoint_prior_scale=0.2)\n",
+    "prophet_model.fit(contract_establish_ts_all_bench)\n",
+    "contract_establish_ts_all_forecast_bench = prophet_model.make_future_dataframe(periods = 4*3, freq='Q')\n",
+    "# make predictions\n",
+    "contract_establish_ts_all_forecast_bench = prophet_model.predict(contract_establish_ts_all_forecast_bench)\n",
+    "predicted_2017 = contract_establish_ts_all_forecast_bench[['ds', 'yhat']][98:102]\n",
+    "actual_2017 = contract_establish_ts_all[-4:]\n",
+    "merged_2017 = actual_2017.merge(predicted_2017, on='ds', how='left')\n",
+    "mse = mean_squared_error(actual_2017['y'], predicted_2017['yhat'])\n",
+    "rmse= sqrt(mse)\n",
+    "rmsle_calc = sqrt(mean_squared_log_error(actual_2017['y'], predicted_2017['yhat']))\n",
+    "print('MSE:', mse)\n",
+    "print('RMSE:', rmse)\n",
+    "print('RMSLE:', rmsle_calc)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -954,6 +1009,55 @@
     "mse = mean_squared_error(expected, predictions)\n",
     "rmse= sqrt(mse)\n",
     "rmsle_calc = sqrt(mean_squared_log_error(expected, predictions))\n",
+    "print('MSE:', mse)\n",
+    "print('RMSE:', rmse)\n",
+    "print('RMSLE:', rmsle_calc)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Benchmarking against 2017 data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:fbprophet.forecaster:Disabling weekly seasonality. Run prophet with weekly_seasonality=True to override this.\n",
+      "INFO:fbprophet.forecaster:Disabling daily seasonality. Run prophet with daily_seasonality=True to override this.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MSE: 5987142353.488276\n",
+      "RMSE: 77376.62666133925\n",
+      "RMSLE: 0.06216995232529565\n"
+     ]
+    }
+   ],
+   "source": [
+    "# end establish\n",
+    "end_establish_ts_all_bench = end_establish_ts_all[:-4]\n",
+    "prophet_model = fbprophet.Prophet(changepoint_prior_scale=0.2)\n",
+    "prophet_model.fit(end_establish_ts_all_bench)\n",
+    "end_establish_ts_all_forecast_bench = prophet_model.make_future_dataframe(periods = 4*3, freq='Q')\n",
+    "# make predictions\n",
+    "end_establish_ts_all_forecast_bench = prophet_model.predict(end_establish_ts_all_forecast_bench)\n",
+    "predicted_2017 = end_establish_ts_all_forecast_bench[['ds', 'yhat']][98:102]\n",
+    "actual_2017 = end_establish_ts_all[-4:]\n",
+    "merged_2017 = actual_2017.merge(predicted_2017, on='ds', how='left')\n",
+    "mse = mean_squared_error(actual_2017['y'], predicted_2017['yhat'])\n",
+    "rmse= sqrt(mse)\n",
+    "rmsle_calc = sqrt(mean_squared_log_error(actual_2017['y'], predicted_2017['yhat']))\n",
     "print('MSE:', mse)\n",
     "print('RMSE:', rmse)\n",
     "print('RMSLE:', rmsle_calc)"
@@ -1032,6 +1136,55 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Benchmarking against 2017 data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:fbprophet.forecaster:Disabling weekly seasonality. Run prophet with weekly_seasonality=True to override this.\n",
+      "INFO:fbprophet.forecaster:Disabling daily seasonality. Run prophet with daily_seasonality=True to override this.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MSE: 55518388590.41079\n",
+      "RMSE: 235623.40416522886\n",
+      "RMSLE: 0.03837536756789249\n"
+     ]
+    }
+   ],
+   "source": [
+    "# expand establish\n",
+    "expand_establish_ts_all_bench = expand_establish_ts_all[:-4]\n",
+    "prophet_model = fbprophet.Prophet(changepoint_prior_scale=0.2)\n",
+    "prophet_model.fit(expand_establish_ts_all_bench)\n",
+    "expand_establish_ts_all_forecast_bench = prophet_model.make_future_dataframe(periods = 4*3, freq='Q')\n",
+    "# make predictions\n",
+    "expand_establish_ts_all_forecast_bench = prophet_model.predict(expand_establish_ts_all_forecast_bench)\n",
+    "predicted_2017 = expand_establish_ts_all_forecast_bench[['ds', 'yhat']][98:102]\n",
+    "actual_2017 = expand_establish_ts_all[-4:]\n",
+    "merged_2017 = actual_2017.merge(predicted_2017, on='ds', how='left')\n",
+    "mse = mean_squared_error(actual_2017['y'], predicted_2017['yhat'])\n",
+    "rmse= sqrt(mse)\n",
+    "rmsle_calc = sqrt(mean_squared_log_error(actual_2017['y'], predicted_2017['yhat']))\n",
+    "print('MSE:', mse)\n",
+    "print('RMSE:', rmse)\n",
+    "print('RMSLE:', rmsle_calc)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 86,
    "metadata": {},
@@ -1104,6 +1257,55 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Benchmarking against 2017 data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:fbprophet.forecaster:Disabling weekly seasonality. Run prophet with weekly_seasonality=True to override this.\n",
+      "INFO:fbprophet.forecaster:Disabling daily seasonality. Run prophet with daily_seasonality=True to override this.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MSE: 98830911439.93748\n",
+      "RMSE: 314373.8402601869\n",
+      "RMSLE: 0.7212084633321558\n"
+     ]
+    }
+   ],
+   "source": [
+    "# net change\n",
+    "net_change_ts_all_bench = net_change_ts_all[:-4]\n",
+    "prophet_model = fbprophet.Prophet(changepoint_prior_scale=0.2)\n",
+    "prophet_model.fit(net_change_ts_all_bench)\n",
+    "net_change_ts_all_forecast_bench = prophet_model.make_future_dataframe(periods = 4*3, freq='Q')\n",
+    "# make predictions\n",
+    "net_change_ts_all_forecast_bench = prophet_model.predict(net_change_ts_all_forecast_bench)\n",
+    "predicted_2017 = net_change_ts_all_forecast_bench[['ds', 'yhat']][98:102]\n",
+    "actual_2017 = net_change_ts_all[-4:]\n",
+    "merged_2017 = actual_2017.merge(predicted_2017, on='ds', how='left')\n",
+    "mse = mean_squared_error(abs(actual_2017['y']), abs(predicted_2017['yhat']))\n",
+    "rmse= sqrt(mse)\n",
+    "rmsle_calc = sqrt(mean_squared_log_error(abs(actual_2017['y']), abs(predicted_2017['yhat'])))\n",
+    "print('MSE:', mse)\n",
+    "print('RMSE:', rmse)\n",
+    "print('RMSLE:', rmsle_calc)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 89,
    "metadata": {},
@@ -1146,6 +1348,55 @@
     "a = add_changepoints_to_plot(fig.gca(), prophet_model, net_change_ts_all_forecast)\n",
     "plt.title('Forecast for the Number of Net Change in Establishments in the US')\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Benchmarking against 2017 Data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:fbprophet.forecaster:Disabling weekly seasonality. Run prophet with weekly_seasonality=True to override this.\n",
+      "INFO:fbprophet.forecaster:Disabling daily seasonality. Run prophet with daily_seasonality=True to override this.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MSE: 3712779773.433462\n",
+      "RMSE: 60932.58384012172\n",
+      "RMSLE: 0.04451922467724685\n"
+     ]
+    }
+   ],
+   "source": [
+    "# open_establish\n",
+    "open_establish_ts_all_bench = open_establish_ts_all[:-4]\n",
+    "prophet_model = fbprophet.Prophet(changepoint_prior_scale=0.2)\n",
+    "prophet_model.fit(open_establish_ts_all_bench)\n",
+    "open_establish_ts_all_forecast_bench = prophet_model.make_future_dataframe(periods = 4*3, freq='Q')\n",
+    "# make predictions\n",
+    "open_establish_ts_all_forecast_bench = prophet_model.predict(open_establish_ts_all_forecast_bench)\n",
+    "predicted_2017 = open_establish_ts_all_forecast_bench[['ds', 'yhat']][98:102]\n",
+    "actual_2017 = open_establish_ts_all[-4:]\n",
+    "merged_2017 = actual_2017.merge(predicted_2017, on='ds', how='left')\n",
+    "mse = mean_squared_error(actual_2017['y'], predicted_2017['yhat'])\n",
+    "rmse= sqrt(mse)\n",
+    "rmsle_calc = sqrt(mean_squared_log_error(actual_2017['y'], predicted_2017['yhat']))\n",
+    "print('MSE:', mse)\n",
+    "print('RMSE:', rmse)\n",
+    "print('RMSLE:', rmsle_calc)"
    ]
   },
   {
@@ -1325,13 +1576,6 @@
     "us_expand_establish_forecast.to_csv('us_expand_establish_forecast.csv')\n",
     "us_open_establish_forecast.to_csv('us_open_establish_forecast.csv')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
